
* [New]Auto load preset system
  - Add "Auto load preset" system to allow auto loading predefined game-specific preset
    depends on currently active game (currently either RF2 or LMU).
    Auto loading preset is triggered when a new or different game is started & active.
    Auto loading will only trigger once per game change.
    This option is disabled by default.

* Vehicle Brand Editor
  - Now allows multi-selection for deleting vehicle brand entries.
  - Fixed an issue where some vehicle info is missing while importing from LMU Rest API.
    Make sure to import again to update all vehicle brand info from LMU.

* Wheels module
  - Add "maximum_rotation_difference_*" options, which sets maximum rotation difference (percentage)
    between left or right wheel and same axle for limiting wheel radius calculation.
    Setting higher difference value may result inaccurate wheel radius reading.
    Default value is `0.002`.

* Brake bias Widget
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.

* Cruise Widget
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.
  - Add "odometer_maximum_digits" option, which sets maximum number of display digits.

* Instrument Widget
  - Changed default "layout" setting value to "1" for horizontal layout
    (as opposite to old "0" value) for consistency.
    User may need to edit old value to "1" to display horizontal layout.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

* Weather forecast Widget
  - The "now" column always shows current weather conditon
    even if RestAPI Module is disabled.

2.17.4 (2024-08-30)
-----------------------------
* General
  - Fixed state check error while restarting API in rare case.
  - Add clickable API button on main window status bar
    that opens "Shared Memory API" config dialog for easy access.

* Fuel calculator