@@ -14,6 +14,13 @@ WIP
     Auto loading preset is triggered when a new or different game is started & active.
     Auto loading will only trigger once per game change.
     This option is disabled by default.
+  - Add "Auto load primary preset" check box in "Preset" tab, which enables or disables
+    "Auto load preset" system.
+  - Add "primary preset" tagging function in "Preset" tab, user can "Right" click on a preset
+    and select "Set primary for ***" to tag a preset as "primary" for specific game.
+    Primary preset will be auto loaded when "Auto load primary preset" is enabled and
+    a new or different game is started & active.
+    Note, a single preset can have tags from multiple games.
 
 * Vehicle Brand Editor
   - Now allows multi-selection for deleting vehicle brand entries.
